grafana-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-core
  namespace: kube-system
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
      - image: grafana/grafana:4.2.0
        name: grafana-core
        imagePullPolicy: IfNotPresent
        # env:
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 1
        volumeMounts:
          - name: grafana-persistent-storage
            mountPath: /var/lib/grafana/
          #- name: config-grafana 
           # mountPath: /etc/grafana/grafana.ini
            #subPath: grafana.ini
      volumes:
      #- name: config-grafana
       # configMap:
        #  defaultMode: 420
         # name: test-grafana
      #- name: grafana-persistent-storage
        #hostPath:
          #path: /var/lib/grafana 
      - name: grafana-persistent-storage
        nfs:
          server: 192.168.199.222
          path: "/home/grafana"
